Move the .gitconfig into a macosx folder
My current approach for the .gitconfig files is to have one for each OS
environment, since there tend to be OS specific settings in them, such as
credential cache providers and CR/LF handling.

--- a/install
+++ b/install
@@ -4,7 +4,6 @@ common_install()
 {
    cp .bash_profile ~
    cp .bashrc ~
-   cp .gitconfig ~
    cp .gvimrc ~
    cp .inputrc ~
    cp .profile ~
@@ -14,6 +13,7 @@ common_install()
 Darwin_install()
 {
    common_install
+   cp macosx/.gitconfig ~
    cp .fonts/* ~/Library/Fonts
    cp -R .vim ~
 }
