--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 common_install()
 {
@@ -10,7 +10,16 @@ common_install()
    cp .vimrc ~
 }
 
-Darwin_install()
+cygwin_install()
+{
+   common_install
+   cp windows/.gitconfig ~
+   cscript.exe windows/install_fonts.vbs
+   mkdir -p ~/vimfiles
+   cp -R .vim/* ~/vimfiles
+}
+
+darwin_install()
 {
    common_install
    cp macosx/.gitconfig ~
@@ -18,4 +27,6 @@ Darwin_install()
    cp -R .vim ~
 }
 
-$(uname)_install
+# Call the OS-specific install function.  On Mac OS X the OSTYPE ends with a
+# number that signifies the darwin release number, so strip that off.
+${OSTYPE//[0-9.]}_install
